--- a/style.css
+++ b/style.css
@@ -128,9 +128,13 @@
 
   .input_box{
     font-size: 1em;
-    width: 230px;
+    width: 200px;
     border-radius: 15px;
-    padding: 5px 5px 5px 65px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 15px;
+/*     padding: 5px 5px 5px 65px; */
     margin-top: 30px;
     border: 3px solid red;
     margin-left: 60px;
