--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
 
   .input_box{
     font-size: 1em;
-    width: 200px;
+    width: 200px auto;
     border-radius: 15px;
     padding-left: 20px;
     padding-top: 10px;
@@ -137,7 +137,7 @@
 /*     padding: 5px 5px 5px 65px; */
     margin-top: 30px;
     border: 3px solid red;
-    margin-left: 60px;
+/*     margin-left: 60px; */
       font-family: "Montserrat", sans-serif;
       font-optical-sizing: auto;
       font-style: normal;
