--- a/style.css
+++ b/style.css
@@ -133,14 +133,19 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-radius: 15px;
-/*     padding: 5px 5px 5px 65px; */
-    margin-top: 30px;
+    /* padding: 5px 5px 5px 65px; */
+    margin-top: 30px; 
     border: 3px solid red;
-/*     margin-left: 60px; */
-      font-family: "Montserrat", sans-serif;
-      font-optical-sizing: auto;
-      font-style: normal;
+    /* margin-left: 40px; */
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%; /* Adjust width as needed */
+    max-width: 300px;
     }
 
 
