--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
     font-style: normal;
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 2px solid violet;
     border-radius: 5px;
     width: 100%; /* Adjust width as needed */
     max-width: 300px;
